Updates to handle HTML changes in iTunes Connect.

--- a/build.xml
+++ b/build.xml
@@ -38,7 +38,7 @@
   </target>
 
   <target name="run" depends="compile">
-      <java classname="${classname}" classpathref="run.path.id">
+      <java classname="${classname}" classpathref="run.path.id" failonerror="true">
         <syspropertyset>
           <propertyref builtin="all"/>
         </syspropertyset>
